--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Bases de TypeScript</title>
 </head>
 <body>
-    <script src="funciones/args-rest.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
